--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "npm run build && node build/index.js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "nodemon": "^3.1.9",
@@ -24,6 +25,6 @@
     "express": "^4.21.2",
     "http": "^0.0.1-security",
     "mongoose": "^8.9.3",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.5"
   }
 }
