--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "nodemon": "^3.1.9",
     "rimraf": "^6.0.1",
@@ -25,6 +26,7 @@
     "express": "^4.21.2",
     "http": "^0.0.1-security",
     "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.5"
   }
 }
